# rsomics-vcf-polysomy

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
src/: cli.rs  fitting.rs  histogram.rs  io.rs  lib.rs  main.rs  model.rs
tests/: compat.rs
tests/golden/: diploid_ra_500.vcf
