[package]
name = "rsomics-vcf-polysomy"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-vcf-polysomy"
authors = ["Zane Leong <efd@live.com>"]
description = "Estimate per-chromosome copy number from BAF distributions — Rust port of bcftools polysomy"

[[bin]]
name = "rsomics-vcf-polysomy"
path = "src/main.rs"

[lib]
name = "rsomics_vcf_polysomy"
path = "src/lib.rs"

doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
[[bench]]
name = "bench"
harness = false
